# noise

./: .gitattributes  README.md  index.html
BlueMath/src/code/Analysis/: AFT.hpp  AdaptiveAFT.cpp  AdaptiveAFT.hpp  AnisotropicDiffGather.cpp  AnisotropicDiffGather.hpp  BlueNoiseDiffDistribution.cpp  BlueNoiseDiffDistribution.hpp  CMakeLists.txt  CosDiffKernel.cpp  Diff1d.cpp  Diff1d.hpp  DiffGather.hpp  DiffKernel.cpp  DiffKernel.hpp  DiffScatter.cpp  DiffScatter.hpp  DiscreteDiffDistribution.cpp  DiscreteDiffDistribution.hpp  GaussianDiff1d.cpp  GaussianDiffKernel.cpp  GaussianDiffKernel.hpp  IsotropicDiffGather.cpp  IsotropicDiffGather.hpp  PFT.cpp  PFT.hpp  SFT.cpp  SFT.hpp  SampledAnisotropicDiffGather.cpp  UniformDiff1d.cpp  (+7 more)
RainbowNoise/src/: CMakeLists.txt  README.md  README.txt  RainbowNoise.sln
RainbowNoise/src/Delaunay/: CMakeLists.txt  Delaunay.cpp  Delaunay.hpp  Delaunay.vcproj  DelaunayMesh.cpp  LloydRelaxation.cpp  LloydRelaxation.hpp  Math2D.cpp
RainbowNoise/src/GPU/: CMakesLists.txt  CleanseObjectAlpha.cpp  CleanseObjectAlpha.vcproj  DrawObjects.cpp  DrawObjects.vcproj
RainbowNoise/src/Lloyd/: BruteDiscreteBalzerVoronoi.cpp  BruteDiscreteBalzerVoronoi.hpp  BruteDiscreteLloydCentroid.cpp  BruteDiscreteLloydCentroid.hpp  BruteDiscreteLloydVoronoi.cpp  BruteDiscreteLloydVoronoi.hpp  CMakeLists.txt  ComboLloydIndex.cpp  ComboLloydIndex.hpp  DiscreteLloyd.cpp  DiscreteLloyd.hpp  DiscreteLloydCentroid.cpp  DiscreteLloydCentroid.hpp  DiscreteLloydVoronoi.cpp  DiscreteLloydVoronoi.hpp  Lloyd.cpp  Lloyd.hpp  Lloyd.vcproj  LloydIndex.cpp  LloydIndex.hpp  LloydSample.cpp  LloydSample.hpp  LloydSite.cpp  LloydSite.hpp  LloydTools.cpp  LloydTools.hpp  SoloLloydIndex.cpp  SoloLloydIndex.hpp  VoronoiFairClassWeight.cpp  VoronoiFairClassWeight.hpp
RainbowNoise/src/Main/: AdaptiveDartThrowing.cpp  AdaptiveDartThrowing.vcproj  AnalyzeHistory.cpp  AnalyzeHistory.vcproj  CMakeLists.txt  ColorTransform.cpp  ColorTransform.vcproj  DartEnergy.cpp  DartEnergy.vcproj  DartLining.cpp  DartLining.vcproj  DartShuffling.cpp  DartShuffling.vcproj  DartShufflingEnergy.cpp  DartShufflingEnergy.vcproj  DartSwapping.cpp  DartSwapping.vcproj  DartThrowing.cpp  DartThrowing.vcproj  DartThrowingClasslessRhoHistory.cpp  DartThrowingClasslessRhoHistory.vcproj  DartThrowingHistory.cpp  DartThrowingHistory.vcproj  DartThrowingPatientKilling.cpp  DartThrowingPatientKilling.vcproj  DiscreteDartThrowing.cpp  DiscreteDartThrowing.vcproj  DiscreteRelaxSamples.cpp  DiscreteRelaxSamples.vcproj  DrawEnergySampleTracker.cpp  DrawEnergySampleTracker.vcproj  DrawSamples.cpp  DrawSamples.vcproj  ExtractDiscreteSamples.cpp  ExtractDiscreteSamples.vcproj  FuzzyDartThrowing.cpp  FuzzyDartThrowing.vcproj  GridNoiseSamples.cpp  GridNoiseSamples.vcproj  HackImage.cpp  (+43 more)
RainbowNoise/src/Sain/: BandIsotropicLFT.cpp  BandIsotropicLFT.vcproj  CMakeLists.txt  DFT.cpp  DFT.vcproj  IsotropicLFT.cpp  IsotropicLFT.vcproj  LinearLFT.cpp  LinearLFT.vcproj  MakeBlobs.cpp  MakeBlobs.vcproj  MakeRandom.cpp  MakeRandom.vcproj  Merge3PFM.cpp  Merge3PFM.vcproj  PFM2PPM.cpp  PFM2PPM.vcproj  PPM2PFM.vcproj  README.txt  RadialPlot.cpp  RadialPlot.vcproj  RandomLFT.cpp  RandomLFT.vcproj  SFT.cpp  SFT.vcproj  ShiftSamples.cpp  ShiftSamples.vcproj  Test.cpp  Test.vcproj  ZonePlate.cpp  ZonePlate.vcproj
RainbowNoise/src/Scripts/: CMakeLists.txt  Makefile  demo.sh  discrete.sh  do.sh  draw_samples.sh  gpusamp.sh  hku.sh  lloyd.sh  logress.sh  loper.sh  math.sh  normalize.cpp  normalize_hist.cpp  other.sh  paper.sh  plot_2class_probability.sh  plot_blob_adaptive.sh  plot_class.sh  plot_green.sh  plot_histogram.sh  plot_hybrid_diff.sh  plot_linear_partial.sh  plot_minspacing.sh  plot_nonuniform_2class.sh  plot_optimality.sh  plot_ostro_adaptive.sh  plot_penrose.sh  plot_priority.sh  plot_shuffle_class.sh  plot_shuffle_nonuniform_2class.sh  plot_shuffle_priority.sh  plot_shuffle_total.sh  plot_total.sh  regress.sh  shgress.sh  shper.sh  shuffle.sh  siblingr.cpp  spectrum.sh  (+5 more)
RainbowNoise/src/Shuffling/: AllClassWeight.cpp  AllClassWeight.hpp  BagEnergySampleStore.cpp  BagEnergySampleStore.hpp  Blob.cpp  Blob.hpp  CMakeLists.txt  ClassWeight.cpp  ClassWeight.hpp  DartShuffler.cpp  DartShuffler.hpp  DartSwapper.cpp  DartSwapper.hpp  DiscreteDartSwapper.cpp  DiscreteDartSwapper.hpp  DiscreteEnergyField.cpp  DiscreteEnergyField.hpp  DiscreteTroughFinder.cpp  DiscreteTroughFinder.hpp  EnergyField.cpp  EnergyField.hpp  EnergySample.cpp  EnergySample.hpp  EnergySampleStore.cpp  EnergySampleStore.hpp  EnergySampleTracker.cpp  EnergySampleTracker.hpp  EnergySort.cpp  EnergySort.hpp  FairClassWeight.cpp  FairClassWeight.hpp  GaussianBlob.cpp  GaussianBlob.hpp  GradualPeakDartShuffler.cpp  GradualPeakDartShuffler.hpp  GridEnergySampleStore.cpp  GridEnergySampleStore.hpp  GridEnergySampleTracker.cpp  GridEnergySampleTracker.hpp  KernelSize.cpp  (+54 more)
RainbowNoise/src/Spectrum/: CMakeLists.txt  DeformableLFT.cpp  DeformableLFT.hpp  Deformer.cpp  Deformer.hpp  IsotropicDeformer.cpp  IsotropicDeformer.hpp  LFT.cpp  LFT.hpp  LinearLFT.cpp  LinearLFT.hpp  PFT.cpp  PFT.hpp  RandomLFT.cpp  RandomLFT.hpp  SFT.cpp  SFT.hpp  Spectrum.vcproj
RainbowNoise/src/Theory/: CMakeLists.txt  DFT.cpp  DFT.hpp  DiffGenerator.cpp  DiffGenerator.hpp  DiffHistogram.vcproj  DiffSampling.cpp  DiffSampling.vcproj  DiffThrowing.cpp  DiffThrowing.vcproj  EmptyMineField.cpp  EmptyMineField.hpp  HatDiffGenerator.cpp  HatDiffGenerator.hpp  Histogram.cpp  Histogram.vcproj  HybridDiffGenerator.cpp  HybridDiffGenerator.hpp  MineField.cpp  MineField.hpp  NeedleDiffGenerator.cpp  NeedleDiffGenerator.hpp  SampleMineField.cpp  SampleMineField.hpp  Theory.vcproj
RainbowNoise/src/Tiling/: CMakeLists.txt  FillPenroseHole.cpp  FillPenroseHole.vcproj  ImportanceSampling_lut13x21.data  ImportanceSampling_lut21x21.data  ImportanceSampling_lut8x21.data  PenroseColoring.cpp  PenroseColoring.vcproj  PenroseSampling.cpp  PenroseSampling.vcproj  R1G2B1GridSampling.cpp  R1G2B1GridSampling.vcproj  example.cpp  example2.cpp  example3.cpp  penrose.ps  quasisampler_colorize.h  quasisampler_prototype.h
(+1195 files in other folders)
