
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(RainbowNoise)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(Delaunay)
#ADD_SUBDIRECTORY(GPU)
ADD_SUBDIRECTORY(Library)
ADD_SUBDIRECTORY(Lloyd)
ADD_SUBDIRECTORY(Main)
ADD_SUBDIRECTORY(Sain)
ADD_SUBDIRECTORY(Scripts)
ADD_SUBDIRECTORY(Shuffling)
ADD_SUBDIRECTORY(Spectrum)
ADD_SUBDIRECTORY(Theory)
ADD_SUBDIRECTORY(Tiling)
