CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(RainbowNoiseShuffling)

INCLUDE_DIRECTORIES(${RainbowNoise_SOURCE_DIR}/Library)

ADD_LIBRARY(${PROJECT_NAME}

AllClassWeight.cpp
AllClassWeight.hpp
BagEnergySampleStore.cpp
BagEnergySampleStore.hpp
Blob.cpp
Blob.hpp
ClassWeight.cpp
ClassWeight.hpp
DartShuffler.cpp
DartShuffler.hpp
DartSwapper.cpp
DartSwapper.hpp
DiscreteDartSwapper.cpp
DiscreteDartSwapper.hpp
DiscreteEnergyField.cpp
DiscreteEnergyField.hpp
DiscreteTroughFinder.cpp
DiscreteTroughFinder.hpp
EnergyField.cpp
EnergyField.hpp
EnergySample.cpp
EnergySample.hpp
EnergySampleStore.cpp
EnergySampleStore.hpp
EnergySampleTracker.cpp
EnergySampleTracker.hpp
EnergySort.cpp
EnergySort.hpp
FairClassWeight.cpp
FairClassWeight.hpp
GaussianBlob.cpp
GaussianBlob.hpp
GradualPeakDartShuffler.cpp
GradualPeakDartShuffler.hpp
GridEnergySampleStore.cpp
GridEnergySampleStore.hpp
GridEnergySampleTracker.cpp
GridEnergySampleTracker.hpp
KernelSize.cpp
KernelSize.hpp
MaxPeakDartShuffler.cpp
MaxPeakDartShuffler.hpp
MonomialBlob.cpp
MonomialBlob.hpp
NullPeakFinder.cpp
NullPeakFinder.hpp
NullTroughFinder.cpp
NullTroughFinder.hpp
PeakFinder.cpp
PeakFinder.hpp
RainbowClassWeight.cpp
RainbowClassWeight.hpp
RandomDiscreteDartSwapper.cpp
RandomDiscreteDartSwapper.hpp
SampleCountClassWeight.cpp
SampleCountClassWeight.hpp
SampleEnergyField.cpp
SampleEnergyField.hpp
ShuffleTools.cpp
ShuffleTools.hpp
SingleBlob.cpp
SingleBlob.hpp
SingleClassWeight.cpp
SingleClassWeight.hpp
ThrowerDartShuffler.cpp
ThrowerDartShuffler.hpp
TrackerEnergyField.cpp
TrackerEnergyField.hpp
TrackerTroughFinder.cpp
TrackerTroughFinder.hpp
TribePointEnergyField.cpp
TribePointEnergyField.hpp
TroughFinder.cpp
TroughFinder.hpp
UniformFairKernelSize.cpp
UniformFairKernelSize.hpp
UniformKernelSize.cpp
UniformKernelSize.hpp
UniformRainbowKernelSize.cpp
UniformRainbowKernelSize.hpp
UniformRandomPeakFinder.cpp
UniformRandomPeakFinder.hpp
UniformRandomTroughFinder.cpp
UniformRandomTroughFinder.hpp
UniformSphereRandomTroughFinder.cpp
UniformSphereRandomTroughFinder.hpp
UnionBlob.cpp
UnionBlob.hpp
UnionEnergySampleTracker.cpp
UnionEnergySampleTracker.hpp
UnionPointEnergyField.cpp
UnionPointEnergyField.hpp
)
