CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(BlueMathAnalysis)

INCLUDE_DIRECTORIES(${BlueMath_SOURCE_DIR}/Library)

ADD_LIBRARY(${PROJECT_NAME}
AFT.cpp
AFT.hpp
AdaptiveAFT.cpp
AdaptiveAFT.hpp
AnisotropicDiffGather.cpp
AnisotropicDiffGather.hpp
BlueNoiseDiffDistribution.cpp
BlueNoiseDiffDistribution.hpp
CosDiffKernel.cpp
CosDiffKernel.hpp
Diff1d.cpp
Diff1d.hpp
DiffDistribution.cpp
DiffDistribution.hpp
DiffGather.cpp
DiffGather.hpp
DiffKernel.cpp
DiffKernel.hpp
DiffScatter.cpp
DiffScatter.hpp
DiscreteDiffDistribution.cpp
DiscreteDiffDistribution.hpp
GaussianDiff1d.cpp
GaussianDiff1d.hpp
GaussianDiffKernel.cpp
GaussianDiffKernel.hpp
IsotropicDiffGather.cpp
IsotropicDiffGather.hpp
PFT.cpp
PFT.hpp
SFT.cpp
SFT.hpp
SampledAnisotropicDiffGather.cpp
SampledAnisotropicDiffGather.hpp
SampledIsotropicDiffGather.cpp
SampledIsotropicDiffGather.hpp
UniformAFT.cpp
UniformAFT.hpp
UniformDiff1d.cpp
UniformDiff1d.hpp
UniformDiffGather.cpp
UniformDiffGather.hpp
UniformLpDiffGather.cpp
UniformLpDiffGather.hpp
)
